# Multifunctional_Chatbot

./: .env  .gitignore  README.md  first.txt  main.py  pyproject.toml  test.txt
templates/: index.html
